--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "faker": "^5.4.0",
+    "normalizr": "^3.6.2",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
     "socket.io": "^4.5.4",
